--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -47,8 +47,7 @@ RUN if [ "${TARGETARCH}" = "amd64" ]; then apk add --no-cache libva-intel-driver
 
 COPY --from=build /build/go2rtc /usr/local/bin/
 
-EXPOSE 1984 8554 8555
-EXPOSE 8555/udp
+EXPOSE 1984 8554 8555 8555/udp
 ENTRYPOINT ["/sbin/tini", "--"]
 VOLUME /config
 WORKDIR /config
