--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,19 @@ jobs:
         uses: actions/setup-go@v5
         with: { go-version: '1.25' }
 
-      - name: Build go2rtc_win64
+      - name: Build go2rtc_win_x64
         env: { GOOS: windows, GOARCH: amd64 }
         run: go build -ldflags "-s -w" -trimpath
-      - name: Upload go2rtc_win64
+      - name: Upload go2rtc_win_x64
         uses: actions/upload-artifact@v4
-        with: { name: go2rtc_win64, path: go2rtc.exe }
+        with: { name: go2rtc_win_x64, path: go2rtc.exe }
 
-      - name: Build go2rtc_win32
+      - name: Build go2rtc_win_x32
         env: { GOOS: windows, GOARCH: 386 }
         run: go build -ldflags "-s -w" -trimpath
-      - name: Upload go2rtc_win32
+      - name: Upload go2rtc_win_x32
         uses: actions/upload-artifact@v4
-        with: { name: go2rtc_win32, path: go2rtc.exe }
+        with: { name: go2rtc_win_x32, path: go2rtc.exe }
 
       - name: Build go2rtc_win_arm64
         env: { GOOS: windows, GOARCH: arm64 }
