BIG docs refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ go2rtc_win*
 
 .DS_Store
 
-.vitepress/cache
-.vitepress/dist
+website/.vitepress/cache
+website/.vitepress/dist
 
 node_modules
 package-lock.json
